# mneme

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: ci-skipped.yml  ci.yml  cross-build.yml  pages.yml  perf.yml  publish.yml  release-plz.yml  release.yml
benches/: auto_context.rs  cold_start.rs  common.rs  recall.rs  remember.rs
benches/baselines/: README.md  compare.py  extract_baseline.py  v0_2_6.json
book/: book.toml
book/src/: SUMMARY.md  agents.md  claude-code-config.md  claude-code-setup.md  cli.md  configuration.md  installation.md  intro.md  license.md  mcp-surface.md  memory-layers.md  release-notes-v1_1.md  troubleshooting.md  versioning.md
docs/: CLAUDE_CODE_SETUP.md  MEMORY_LAYERS.md
docs/examples/claude-code-config/: CLAUDE.md  settings.json
docs/examples/claude-code-hooks/: precompact.sh  session-start.sh  stop.sh
scripts/: install.sh  manual_test.sh
src/: config.rs  error.rs  ids.rs  lib.rs  main.rs  scope.rs  upgrade_audit.rs
src/cli/: auth.rs  backup.rs  client.rs  daemon.rs  demo.rs  export.rs  init.rs  inspect.rs  mod.rs  restore.rs  run.rs  stats.rs  stop.rs
src/daemon/: auth.rs  listener.rs  mod.rs
src/embed/: batch.rs  candle_bge.rs  candle_minilm.rs  migrate.rs  mod.rs  model_loader.rs  stub.rs
src/index/: delta.rs  hnsw.rs  mod.rs  snapshot.rs
src/init/: assets.rs  json_config.rs  marker.rs  mod.rs
src/init/agents/: claude_code.rs  claude_desktop.rs  cursor.rs  mod.rs  opencode.rs
src/mcp/: dispatch.rs  jsonrpc.rs  mod.rs  server.rs
src/mcp/resources/: context.rs  mod.rs  procedural.rs  recent.rs  session.rs  stats.rs
src/mcp/tools/: export.rs  forget.rs  list_scopes.rs  mod.rs  pin.rs  recall.rs  recall_recent.rs  record_event.rs  remember.rs  size_tier.rs  stats.rs  summarize_session.rs  switch_scope.rs  unpin.rs  update.rs
src/mcp/transport/: stdio.rs
src/memory/: activity.rs  checkpoint_scheduler.rs  consolidation.rs  consolidation_scheduler.rs  episodic.rs  mod.rs  procedural.rs  semantic.rs  snapshot_scheduler.rs  working.rs
src/migrate/: mod.rs  v1.rs
src/orchestrator/: assembly.rs  budget.rs  mod.rs  scoring.rs
src/storage/: archive.rs  layout.rs  lockfile.rs  memory_impl.rs  mod.rs  redb_impl.rs  wal.rs
templates/: MNEME.md
tests/: concurrent_writes.rs  crash_recovery.rs  crash_recovery_semantic.rs  daemon_e2e.rs  daemon_self_detach.rs  disk_full.rs  e2e_mcp.rs  e2e_storage.rs  hook_scripts.rs  lockfile.rs  logging_to_file.rs  storage_proptest.rs  transport_proptest.rs  v1_0_to_v1_1_migration.rs  wal_format_proptest.rs
